@@ -1,5 +1,7 @@
 2022-07-04  Omar Polo  <op@omarpolo.com>
 
+	* server.c (check_path): log when it fails to open a file because of permissions
+
 	* iri.c (parse_path): allow '@' and ':' in paths
 
 2022-04-08  Omar Polo  <op@omarpolo.com>
